navbar items responsive still need to correct to have homogeneous right and left side on mobile

--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -1,4 +1,20 @@
 ////// NAVBAR CONTAINER
+// V1
+  // .navbar-groot {
+  //   display: flex;
+  //   justify-content: space-between;
+  //   align-items: center;
+  //   width: 100%;
+  //   height: 55px;
+  //   font-family: "Cinzel", "serif";
+  //   background-color: $navbar-color;
+  //   position: fixed;
+  //   left: 0px;
+  //   top: 0px;
+  //   z-index: 1;
+  // }
+
+// TEST V2
   .navbar-groot {
     display: flex;
     justify-content: space-between;
@@ -6,38 +22,53 @@
     width: 100%;
     height: 55px;
     font-family: "Cinzel", "serif";
-    // background-color: rgb(22, 18, 62);
-    background-color: $navbar-color;
-    // background-color: #2e184f;
-    // padding: 0px 20px;
+    background-color: red;
     position: fixed;
     left: 0px;
     top: 0px;
     z-index: 1;
-  }
+}
 
 ////// NAVBAR LEFT
+// V1
+  // .navbar-left {
+  //   order: 1;
+  //   width: 30%;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: flex-start;
+  //   font-size: 12px;
+  //   line-height: 12px;
+  //   letter-spacing: 1px;
+  // }
+
+// TEST V2
   .navbar-left {
     order: 1;
-    width: 30%;
     display: flex;
+    /* width: 30%; */
     align-items: center;
     justify-content: flex-start;
-    position: relative;
-    left: 10px;
-    font-size: 12px;
-    line-height: 12px;
-    letter-spacing: 1px;
-
-  }
+    background-color: black;
+}
 
 //////NAVBAR CENTER
+// V1
+  // .navbar-center {
+  //   order: 2;
+  //   width: 40%;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: space-between;
+  // }
+// TEST V2
   .navbar-center {
-    order: 2;
-    width: 40%;
     display: flex;
-    align-items: center;
-    justify-content: space-between;
+    order: 2;
+    // flex: 0 1 auto;
+    height: 55px;
+    // align-self: center;
+    background-color: orange;
   }
 
 // NAVBAR CENTER BUTTON
@@ -53,6 +84,7 @@
     text-shadow: 0px 3px black;
     font-size: 14px;
     letter-spacing: 2px;
+    background-color: brown;
   }
 
   .navbar-btn-plant:hover {
@@ -72,25 +104,39 @@
   }
 
 ////// NAVBAR RIGHT
+// V1
+  // .navbar-right {
+  //   order: 3;
+  //   width: 30%;
+  //   display: flex;
+  //   align-items: center;
+  //   justify-content: flex-end;
+  //   margin-right: 0px;
+  // }
+
+// TEST V2
   .navbar-right {
     order: 3;
-    width: 30%;
     display: flex;
     align-items: center;
     justify-content: flex-end;
-    position: relative;
-    right: 10px;
     margin-right: 0px;
+    background-color: blue;
   }
 
 // NAVBAR RIGHT ITEMS
-  .navbar-item-box {
+// TEST V2 juste qq ajouts
+  .navbar-item-box-right {
+    height: 55px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    height: 55px;
-    padding: 0px;
+    position: absolute;
+    top: 0px;
+    right: 10px;
+    background-color: purple;
   }
+
 
   .navbar-item-box:hover {
     background-color: #1c0b35;
@@ -127,12 +173,26 @@
 
 
 // NAVBAR ITEMS
+// V1
   .navbar-item {
     flex: 0 1 auto;
     cursor: pointer;
     padding: 0 10px;
     color: $text-purple;
     text-shadow: 2px 0px black;
+   }
+// TEST V2 item left when sign in
+  .navbar-item-left {
+    color: #cbc3d8;
+    text-shadow: 2px 0px black;
+    background-color: green;
+    height: 55px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    position: absolute;
+    top: 0px;
+    left: 10px;
   }
 
   .navbar-item:hover, :focus {
@@ -169,13 +229,15 @@
   color: red;
 }
 /* Navbar dropdown menu */
-.navbar-wagon-dropdown-menu {
+.navbar-groot-dropdown-menu {
   background-color: $navbar-color;
   margin-top: 5px;
   box-shadow: 1px 1px 4px #E6E6E6;
   border-color: $text-purple;
+  left: 0;
+  right: auto;
 }
-.navbar-wagon-dropdown-menu, p, ul> li > a {
+.navbar-groot-dropdown-menu, p, ul> li > a {
   text-shadow: none;
   transition: color 0.3s ease;
   font-weight: lighter !important;
@@ -184,16 +246,16 @@
   line-height: 22px !important;
   padding: 25px 25px;
 }
-.navbar-wagon-dropdown-menu li > a:hover {
+.navbar-groot-dropdown-menu li > a:hover {
   background: transparent !important;
   color: black !important;
 }
-.navbar-wagon-dropdown-menu:before {
+.navbar-groot-dropdown-menu:before {
   content: ' ';
   height: 10px;
   width: 10px;
   position: absolute;
-  right: 10px;
+  left: 10px;
   top: -6px;
   background-color: $navbar-color;
   transform: rotate(45deg);
